[tool.poetry]
name = "docker-python"
version = "0.1.0"
description = ""
authors = ["jyoti <paljyoti0129@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.50.0"
smolagents = "^1.9.2"
langchain = "^0.3.20"
nest-asyncio = "^1.6.0"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.19"
openai = "^1.65.3"
langchain-openai = "^0.3.7"
transformers = "^4.49.0"
torch = "^2.6.0"
accelerate = "^1.4.0"
langchain-groq = "^0.2.4"
langchain-huggingface = "^0.1.2" 
langgraph = "^0.3.5"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
