[project]
name = "docker-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.4.0",
    "fastapi[standard]>=0.115.11",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-groq>=0.2.4",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.5",
    "nest-asyncio>=1.6.0",
    "openai>=1.65.4",
    "playwright>=1.50.0",
    "python-dotenv>=1.0.1",
    "smolagents>=1.10.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "uvicorn>=0.34.0",
]
